Enable used space reporting for swap.

BUG: 367473